@@ -43,7 +43,15 @@ Item
     property real imageOpacitySmall270: imageOpacity(pieceAngle, 270) * isSmall
 
     function imageOpacity(pieceAngle, imgAngle) {
-        var angle = (pieceAngle - imgAngle + 360) % 360
+        // Unlike in the other game variants, we need a modulo operation that
+        // guarantees a positive result. The simpler and faster expression
+        // (pieceAngle - imgAngle + 360) % 360 can temporarily become negative
+        // during transition animations if the rotate backward button is hit
+        // quickly in multiple times. In the other game variants, this only
+        // affects the pseudo-3D effect during the animation, which the user
+        // won't notice, but here the opacity function would return 0, which
+        // would make the piece temporarily disappear.
+        var angle = ((pieceAngle - imgAngle) % 360 + 360) % 360
         if (angle <= 90) return 0
         if (angle <= 180) return -Math.cos(angle * Math.PI / 180)
         if (angle <= 270) return 1
